# CMakeTemplates

./: README.md
RootDirectory/: CMakeLists.txt
RootDirectory/Submodule/: CMakeLists.txt
